--- a/src/Pages/Login/Login.module.css
+++ b/src/Pages/Login/Login.module.css
@@ -1,45 +1,45 @@
-/*
-note:
-1:right
-2:left
-*/
-#login-page {
+.container {
+  height: 100%;
   display: flex;
-  flex-direction: row;
-  background-color: #f3f4f6;
-  height: 100vh;
 }
-#login-page > * {
+.container > .box {
   width: 50%;
 }
-#login-page > :nth-child(2) {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-#login-page > div:nth-child(1) {
+.container > :nth-child(1) {
   background: radial-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../../assests/images/background.svg");
 }
-
-#login-page > :nth-child(2) h3,
-#login-page > :nth-child(2) h5 {
-  margin: 5px;
-  text-align: center;
+.container > :nth-child(2) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-#login-page > :nth-child(2) h5 {
-  opacity: 0.5;
-  font-weight: normal;
+#login-form {
+  min-height: 400px;
+  width: 50%;
+  background-color: white;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
 }
-
+#login-form .header {
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+#login-form .header > h5 {
+  font-weight: lighter;
+}
+#login-form .content {
+  padding: 1rem;
+  margin-top: 1rem;
+}
 @media only screen and (max-width: 991px) {
-  #login-page > div:nth-child(1) {
+  .container > :nth-child(1) {
     display: none;
   }
-
-  #login-page > :nth-child(2) {
+  .container > :nth-child(2) {
     width: 100%;
   }
 }
